# Toice

./: .gitignore  CMakeLists.txt  README.md  install.sh  resources.qrc
flatpak/: com.toice.app.desktop  com.toice.app.toggle.desktop  com.toice.app.yml
include/: audiorecorder.h  databasemanager.h  globalshortcut.h  inferenceworker.h  mainwindow.h  overlaywidget.h  settingsdialog.h  setupwizard.h
scripts/: build_flatpak.sh  register_toice_shortcut.sh  toggle_recording.sh  toice-build.sh  toice-trigger.sh  toice.sh
src/: audiorecorder.cpp  globalshortcut.cpp  inferenceworker.cpp  main.cpp  mainwindow.cpp  overlaywidget.cpp  settingsdialog.cpp
